rearranging pom files for building executable jars